--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -54,7 +54,7 @@
     <div class="md-footer-meta__inner md-grid">
       {% include "partials/copyright.html" %}
       <div class="footer-visit-count">
-        <span>本站访问量：</span>
+        <span>本站点击量：</span>
         <script async src="//finicounter.eu.org/finicounter.js"></script>
         <span id="finicount_views"></span>
         &nbsp;|&nbsp;
@@ -73,7 +73,7 @@
       </div>
       <script>
         function timingTime() {
-          const start = "2022-10-20T00:00:00";
+          const start = "2025-04-14T00:00:00";
           const startTime = new Date(start).getTime();
           const now = Date.now();
           let diff = Math.floor((now - startTime) / 1000);
